feat(recommendations): implement redis for rate-limiting user by session, and save generated recommendations

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,7 @@ REDIRECT_URI=http://localhost:8080/callback
 APP_ENV=dev
 APP_PORT=8080
 APP_NAME=melody-mood-service
+
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_PASSWORD=your_redis_password
